--- a/index.html
+++ b/index.html
@@ -20,55 +20,92 @@
     <!-- title -->
     <title>Mega News</title>
   </head>
-  <body class="bg-[#F6F6F6]">
-    <!-- header start  -->
-    <header class="container mx-auto">
-      <nav class="flex text-white items-center h-[60px]">
-        <a
-          class="mr-2 bg-[#5D5FEF] rounded-[4px] p-[8px] px-6 font-bold"
-          href="#home"
-          >Mega</a
-        >
-        <a
-          class="mr-2 text-[#5D5FEF] rounded-[4px] p-[8px] px-6 font-bold"
-          href="#home"
-          >News</a
-        >
-        <a
-          class="mr-2 text-[#5D5FEF] rounded-[4px] p-[8px] px-6 font-bold"
-          href="#home"
-          >News</a
-        >
+  <body>
+    <main class="bg-[#F6F6F6]">
+      <!-- header start  -->
+      <header class="container mx-auto p-4">
+        <nav class="flex text-white items-center h-[60px]">
+          <a
+            class="mr-2 bg-[#5D5FEF] rounded-[4px] p-[8px] px-6 font-bold"
+            href="#home"
+            >Mega</a
+          >
+          <a
+            class="mr-2 text-[#5D5FEF] rounded-[4px] p-[8px] px-6 font-bold"
+            href="#home"
+            >News</a
+          >
+          <a
+            class="mr-2 text-[#5D5FEF] rounded-[4px] p-[8px] px-6 font-bold"
+            href="#home"
+            >News</a
+          >
 
-        <a
-          class="bg-[#5D5FEF] ml-auto rounded-[4px] p-[8px] px-6 font-bold"
-          href="#home"
-          >News</a
-        >
-        <a
-          class="mr-2 text-[#5D5FEF] rounded-[4px] p-[8px] px-6 font-bold"
-          href="#home"
-          >Blog</a
-        >
-      </nav>
-    </header>
-    <hr class="h-[1px] my-[20px] bg-[#CDCDCD]" />
-    <!-- header end -->
-    <!-- category section start -->
-    <section
-      class="container flex justify-between mx-auto"
-      id="category"
-    ></section>
-    <!-- category section end -->
-    <!-- items result section start -->
-    <section class="container mx-auto pt-6">
-      <div class="w-full p-6 bg-white" id="items-result"></div>
+          <a
+            class="bg-[#5D5FEF] ml-auto rounded-[4px] p-[8px] px-6 font-bold"
+            href="#home"
+            >News</a
+          >
+          <a
+            class="mr-2 text-[#5D5FEF] rounded-[4px] p-[8px] px-6 font-bold"
+            href="#home"
+            >Blog</a
+          >
+        </nav>
+      </header>
+      <hr class="h-[1px] my-[20px] bg-[#CDCDCD] w-[95%] mx-auto" />
+      <!-- header end -->
+      <!-- category section start -->
+      <section
+        class="container flex justify-between mx-auto"
+        id="category"
+      >
     </section>
-    <!-- items result section end -->
-    <section>
-        
-    </section>
+      <!-- category section end -->
+      <!-- items result section start -->
+      <section class="container mx-auto pt-6">
+        <div class="w-full p-6 bg-white rounded" id="items-result"></div>
+      </section>
+      <!-- items result section end -->
+      <!-- Sort by view section -->
+      <section class="container mx-auto pt-6 flex items-center pb-6">
+        <div>
+          <p>
+            <span class="font-semibold">Sort By View: </span
+            ><select
+              id="sort-items"
+              class="px-6 py-1 ml-2 text-[gray] outline-none"
+            >
+              <option value="default" selected>Default</option>
+              <option value="menual">Menual</option>
+            </select>
+          </p>
+        </div>
+        <div class="">
+          <a
+            class="bg-[#5D5FEF] ml-auto rounded-[4px] p-[8px] px-6 font-semibold text-white"
+            href="#Today's Pick"
+            >Today's Pick</a
+          >
+          <a
+            class="border border-[#5D5FEF] text-[#5D5FEF] rounded-[4px] p-[8px] px-6 font-semibold"
+            href="#Trending"
+            >Trending</a
+          >
+        </div>
+      </section>
+      <!-- Sort by view section end -->
+      <section class="container" id="news-card">
 
+      </section>
+    </main>
+
+    <!-- footer section -->
+    <footer>
+      <p class="text-[#858585] font-semibold text-center pt-10">
+        Copyright 2022 News Portal
+      </p>
+    </footer>
     <script src="./js/app.js"></script>
   </body>
 </html>
