--- a/index.html
+++ b/index.html
@@ -17,10 +17,18 @@
         },
       };
     </script>
+   <!-- daisyui component library added -->
+<link href="https://cdn.jsdelivr.net/npm/daisyui@2.24.0/dist/full.css" rel="stylesheet" type="text/css" />
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2/dist/tailwind.min.css" rel="stylesheet" type="text/css" />
+
+
+<!-- link font awsome  -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- title -->
     <title>Mega News</title>
   </head>
   <body>
+   
     <main class="bg-[#F6F6F6]">
       <!-- header start  -->
       <header class="container mx-auto p-4">
@@ -95,7 +103,7 @@
         </div>
       </section>
       <!-- Sort by view section end -->
-      <section class="container" id="news-card">
+      <section class="container mx-auto" id="card-container">
 
       </section>
     </main>
