--- a/index.html
+++ b/index.html
@@ -6,17 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- css framwork tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              clifford: "#da373d",
-            },
-          },
-        },
-      };
-    </script>
+
    <!-- daisyui component library added -->
 <link href="https://cdn.jsdelivr.net/npm/daisyui@2.24.0/dist/full.css" rel="stylesheet" type="text/css" />
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2/dist/tailwind.min.css" rel="stylesheet" type="text/css" />
@@ -107,6 +97,14 @@
 
       </section>
     </main>
+    <input type="checkbox" id="my-modal-6" class="modal-toggle" />
+  <div class="modal modal-bottom sm:modal-middle">
+    <div id="modal-container" class="modal-box bg-white">
+      <h3 class="font-bold text-lg">Congratulations random Internet user!</h3>
+      <p id="news-details" class="py-4">You've been selected for a chance to get one year of subscription to use Wikipedia for free!</p>
+     
+    </div>
+  </div>
 
     <!-- footer section -->
     <footer>
