--- a/index.html
+++ b/index.html
@@ -22,30 +22,30 @@
     <main class="bg-[#F6F6F6]">
       <!-- header start  -->
       <header class="container mx-auto p-4">
-        <nav class="flex text-white items-center h-[60px]">
+        <nav class="lg:flex text-white items-center h-[60px]">
           <a
-            class="mr-2 bg-[#5D5FEF] rounded-[4px] p-[8px] px-6 font-bold"
+            class="mr-2 bg-[#5D5FEF] rounded-[4px] py-2 lg:p-[8px] px-2 lg:px-6 font-bold"
             href="#home"
             >Mega</a
           >
           <a
-            class="mr-2 text-[#5D5FEF] rounded-[4px] p-[8px] px-6 font-bold"
+            class="mr-2 text-[#5D5FEF] rounded-[4px] py-2  lg:p-[8px] px-2 lg:px-6 font-bold"
             href="#home"
             >News</a
           >
           <a
-            class="mr-2 text-[#5D5FEF] rounded-[4px] p-[8px] px-6 font-bold"
+            class="mr-2 text-[#5D5FEF] rounded-[4px] py-2  lg:p-[8px] px-2 lg:px-6 font-bold"
             href="#home"
             >News</a
           >
 
           <a
-            class="bg-[#5D5FEF] ml-auto rounded-[4px] p-[8px] px-6 font-bold"
+            class="bg-[#5D5FEF] ml-auto rounded-[4px]  py-2 lg:p-[8px] px-2 lg:px-6 font-bold"
             href="#home"
             >News</a
           >
           <a
-            class="mr-2 text-[#5D5FEF] rounded-[4px] p-[8px] px-6 font-bold"
+            class="mr-2 text-[#5D5FEF] rounded-[4px]  py-2 lg:p-[8px] px-2 lg:px-6 font-bold"
             href="#home"
             >Blog</a
           >
@@ -55,7 +55,7 @@
       <!-- header end -->
       <!-- category section start -->
       <section
-        class="container flex justify-between mx-auto"
+        class="container flex flex-wrap px-2 lg:px-0 justify-between mx-auto"
         id="category"
       >
     </section>
@@ -66,7 +66,7 @@
       </section>
       <!-- items result section end -->
       <!-- Sort by view section -->
-      <section class="container mx-auto pt-6 flex items-center pb-6">
+      <section class="container mx-auto pt-6 lg:flex items-center pb-6">
         <div>
           <p>
             <span class="font-semibold">Sort By View: </span
@@ -79,7 +79,7 @@
             </select>
           </p>
         </div>
-        <div class="">
+        <div class="mt-5 lg:mt-0">
           <a
             class="bg-[#5D5FEF] ml-auto rounded-[4px] p-[8px] px-6 font-semibold text-white"
             href="#Today's Pick"
