blog page added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           >
           <a
             class="mr-2 text-[#5D5FEF] rounded-[4px]  py-2 lg:p-[8px] px-2 lg:px-6 font-bold"
-            href="#home"
+            href="./blog.html"
             >Blog</a
           >
         </nav>
