--- a/blog.html
+++ b/blog.html
@@ -13,17 +13,23 @@
 
     <div class="bg-white lg:px-16 py-8 mb-4 rounded shadow-2xl  lg:w-[70%] lg:mx-auto">
         <h1 class="text-md my-2 font-semibold"><span class="text-xl font-bold">Question:</span>Difference between var , let and const? </h1>
-        <h1><span>Ans:</span>The main difference between var , let and const is   declaring the variable using var we can redeclare and reassign it .  If we use let to declare a variable then we can reassign it but we can’t redeclare. On the other hand declare the variable using const then we can’t Redeclaring and reassign it  . </h1>
+        <h1><span>Ans:</span>The main difference between var , let and const is   declaring the variable using var we can redeclare and reassign it .  If we use let to declare a variable then we can reassign it but we can't redeclare. On the other hand declare the variable using const then we can't Redeclaring and reassign it  . </h1>
 
     </div>
     <div class="bg-white lg:px-16 py-8 mb-4 rounded shadow-2xl  lg:w-[70%] lg:mx-auto">
-        <h1 class="text-md my-2 font-semibold"><span class="text-xl font-bold">Question:</span>Arrow function vs Regular function  </h1>
-        <h1><span>Ans:</span>   </h1>
+        <h1 class="text-md my-2 font-semibold"><span class="text-xl font-bold">Question:</span>What is the difference between arrow functions and regular functions?  </h1>
+        <h1><span>Ans: 
+            Regular functions created using function declarations or expressions are 'constructible' and 'callable'. Since regular functions are constructible, they can be called using the 'new' keyword. But the arrow functions are only 'callable' and not constructible.</span>   </h1>
 
     </div>
     <div class="bg-white lg:px-16 py-8 mb-4 rounded shadow-2xl  lg:w-[70%] lg:mx-auto">
-        <h1 class="text-md my-2 font-semibold"><span class="text-xl font-bold">Question:</span>Arrow function vs Regular function  </h1>
-        <h1><span>Ans:</span>   </h1>
+        <h1 class="text-md my-2 font-semibold"><span class="text-xl font-bold">Question:</span>Difference between map, forEach ,filter and find?</h1>
+        <h1><span><p>Ans:A.The map() method creates an entirely new array. 
+            The forEach() method does not create a new array based on the given array. The map() method returns the newly created array according to the provided callback function.</p>
+            <p>B. The forEach() method returns "undefined".The find() locates a specific entry by a predicate and returns it.</p>
+            <p>C. Methods like map() and filter() are about twice as fast as using forEach() and pushing to a new array to do the same thing. Using forEach() for multi-step manipulation is about twice as fast as chaining methods like filter() and map() .</p>
+            <p>D. And the difference between forEach and filter is that forEach just loop over the array and executes the callback but filter executes the callback and check its return value.</p>
+            <p>E. And the find() here is faster as filter() method relies on find() anyway.</p> </span></h1>
 
     </div>
     
