--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- css framwork tailwind -->
+    <!-- css framwork tailwind link -->
     <script src="https://cdn.tailwindcss.com"></script>
 
    <!-- daisyui component library added -->
