--- a/blog.html
+++ b/blog.html
@@ -88,13 +88,13 @@
       </h1>
     </div>
      <!-- End Question & Answer Section -->
-     
+
       <!-- Back to Home Section -->
     <div
       class="bg-white lg:px-16 py-8 mb-4 rounded shadow-2xl lg:w-[70%] lg:mx-auto text-center"
     >
       <a
-        class="text-[#5D5FEF] rounded-[4px] lg:p-[8px] lg:px-6 font-bold text-xl"
+        class="text-[#5D5FEF] rounded-[4px] lg:p-[8px] lg:px-6 font-bold text-xl hover:text-[green]"
         href="/index.html#home"
         ><i class="fa-solid fa-arrow-left"></i> Back</a
       >
