--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
       <header class="container mx-auto p-4">
         <nav class="lg:flex text-white items-center h-[60px]">
           <a
-            class="mr-2 bg-[#5D5FEF] rounded-[4px] py-2 lg:p-[8px] px-2 lg:px-6 font-bold"
+            class="mr-2 bg-[#5D5FEF] rounded-[4px] py-2 lg:p-[8px] px-2 lg:px-6 font-bold hover:bg-sky-700"
             href="#home"
             >Mega</a
           >
           <a
-            class="mr-2 text-[#5D5FEF] rounded-[4px] py-2  lg:p-[8px] px-2 lg:px-6 font-bold"
+            class="mr-2 text-[#5D5FEF] rounded-[4px] py-2  lg:p-[8px] px-2 lg:px-6 font-bold hover:text-[green]"
             href="#home"
             >News</a
           >
 
           <a
-            class="bg-[#5D5FEF] ml-auto rounded-[4px]  py-2 lg:p-[8px] px-2 lg:px-6 font-bold"
+            class="bg-[#5D5FEF] ml-auto rounded-[4px]  py-2 lg:p-[8px] px-2 lg:px-6 font-bold hover:bg-sky-700"
             href="#home"
             >News</a
           >
           <a
-            class="mr-2 text-[#5D5FEF] rounded-[4px]  py-2 lg:p-[8px] px-2 lg:px-6 font-bold"
+            class="mr-2 text-[#5D5FEF] rounded-[4px]  py-2 lg:p-[8px] px-2 lg:px-6 font-bold hover:text-[green]"
             href="./blog.html"
             >Blog</a
           >
@@ -61,7 +61,7 @@
       </section>
       <!-- items result section end -->
       <!-- Sort by view section -->
-      <section class="container mx-auto pt-6 lg:flex items-center pb-6">
+      <section class="container mx-auto pt-6 lg:flex items-center pb-6 space-x-[60%]">
         <div>
           <p>
             <span class="font-semibold">Sort By View: </span
@@ -76,7 +76,7 @@
         </div>
         <div class="mt-5 lg:mt-0">
           <a
-            class="bg-[#5D5FEF] ml-auto rounded-[4px] p-[8px] px-6 font-semibold text-white"
+            class="bg-[#5D5FEF] rounded-[4px] p-[8px] px-6 font-semibold text-white"
             href="#Today's Pick"
             >Today's Pick</a
           >
