--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
           >
           <a
             class="mr-2 text-[#5D5FEF] rounded-[4px] py-2  lg:p-[8px] px-2 lg:px-6 font-bold hover:text-[green]"
-            href="#home"
+            href="#news"
             >News</a
           >
 
           <a
             class="bg-[#5D5FEF] ml-auto rounded-[4px]  py-2 lg:p-[8px] px-2 lg:px-6 font-bold hover:bg-sky-700"
-            href="#home"
+            href="#news"
             >News</a
           >
           <a
@@ -77,7 +77,7 @@
         <div class="mt-5 lg:mt-0">
           <a
             class="bg-[#5D5FEF] rounded-[4px] p-[8px] px-6 font-semibold text-white"
-            href="#Today's Pick"
+            href="#Today's-Pick"
             >Today's Pick</a
           >
           <a
